# criteo-retail-media-crew-ai

./: .env.example  .gitignore  Azuew Open AI Configuration.md  LICENSE  README.md  agents.py  crew.py  crew_one.py  crew_three.py  crew_two.py  main.py  node-calling-python.md  pyproject.toml  runner.py  tasks.py  webui.sh
architecture/: retail_media_object_model.puml
chapter_1/: README.md  pyproject.toml
chapter_1/output/: accounts.md  brands.md  retailers.md
chapter_1/src/chapter_1/: crew.py  main.py
chapter_1/src/chapter_1/config/: agents.yaml  tasks.yaml
chapter_1/src/chapter_1/tests/: test_accounts.py  utils.py
chapter_2/: .gitignore  README.md  pyproject.toml
chapter_2/src/chapter_2/: crew.py  main.py
chapter_2/src/chapter_2/config/: agents.yaml  tasks.yaml
chapter_2/src/chapter_2/tests/: test_accounts.py  test_analytics.py  test_campaighs.py  test_charts.py  test_lineitems.py  utils.py
chapter_2/src/chapter_2/tools/: charts.py  search.py
chapter_3/: README.md  pyproject.toml
chapter_3/src/chapter_3/: crew.py  main.py
chapter_3/src/chapter_3/config/: agents.yaml  tasks.yaml
chapter_3/src/chapter_3/tools/: accounts.py  analytics.py  campaigns.py  lineitems.py
config/: agents.yaml  tasks.yaml
groq_planning/: README.md  pyproject.toml  report.md
groq_planning/src/groq_planning/: crew.py  main.py
part_1/: .env.example  README.md  auth_output_example.json  poster.py  pyproject.toml
part_1/src/part_1/: crew.py  main.py
part_1/src/part_1/config/: agents.yaml  tasks.yaml
part_1/src/part_1/tests/: test_accounts.py  utils.py
part_1/src/part_1/tools/: access.py  accounts.py  auth.py
part_2/: .env.example  README.md  example-crew-notes.md  pyproject.toml
part_2/db/: chroma.sqlite3
part_2/src/part_2/: azure_example.py  crew.py  groq1.py  llm.py  llm_chooser.py  llm_example.py  main.py
part_2/src/part_2/config/: agents.yaml  tasks.yaml
part_2/src/part_2/models/: account.py  campaign.py  concert.py
part_2/src/part_2/tests/: test_accounts.py  test_analytics.py  test_campaighs.py  test_campaign_budget.py  test_campaigns.py  test_campaigns_and_charts.py  test_charts.py  test_lineitems.py  utils.py
part_2/src/part_2/tools/: access.py  accounts.py  auth.py  calculator_tools.py  campaigns.py  charts.py  human.py  lineitems.py  search.py  utils.py
part_3/: .env.example  README.md  notes.md  pyproject.toml
part_3/data/: ed_sheeran_entertainment_venues.json
part_3/src/part_3/: chainlit_example.py  crew.py  main.py  panel_main.py  streamlit_main.py  ui_main.py
part_3/src/part_3/config/: agents.yaml  tasks.yaml
part_3/src/part_3/handlers/: CatsHandler.py  panel.py  streamlit_handler.py
part_3/src/part_3/models/: account.py  campaign.py  concert.py  lineitem.py
part_3/src/part_3/tests/: entertainment_response.json  test_accounts.py  test_analytics.py  test_campaign_lineitem.py  test_campaigns.py  test_concerts.py  test_lineitems.py  test_model.py  test_reports.py  test_search.py  test_yaml.py  utils.py  with_embedded_json.yaml  x-test_analytics.py  x-test_charts.py  x-test_lineitems.py  x-test_reports.py  x_test_concerts.py
part_3/src/part_3/tools/: access.py  accounts.py  analytics.py  budget.py  calculator_tools.py  campaigns.py  charts.py  entertainment.py  human.py  lineitems.py  search.py  utils.py
part_4/: README.md  pyproject.toml
tools/: accounts.py  analytics.py  auth.py  brands.py  campaigns.py  lineitems.py  retailers.py
using-ollama/: Llama2Modelfile  MistralModelfile  Using Ollama.md
