[tool.poetry]
name = "chapter_1"
version = "0.1.0"
description = "chapter-1 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
chapter_1 = "chapter_1.main:run"
run_crew = "chapter_1.main:run"
train = "chapter_1.main:train"
replay = "chapter_1.main:replay"
test = "chapter_1.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
