[tool.poetry]
name = "chapter_3"
version = "0.1.0"
description = "chapter_3 using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
chapter_3 = "chapter_3.main:run"
run_crew = "chapter_3.main:run"
train = "chapter_3.main:train"
replay = "chapter_3.main:replay"
test = "chapter_3.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
